Fixed overflow bug

--- a/private/sass/index.scss
+++ b/private/sass/index.scss
@@ -6,10 +6,6 @@ span.spacer {
     margin: 0 12px 0 12px;
 }
 
-body {
-    overflow-y: scroll;
-}
-
 md-chips-wrap {
     margin-top: 18px;
     min-height: 40px;
